JSAI/error/src/test/resources/base/prototype_a001.js

var foo = function() { print("constructed") };

foo["prototype"].x = 1;

var y = new foo();

print(y.x);

